# math

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  README.rst  bac_returning_math_qs.tex  build.bat  build.sh  build_cpp.bat  build_cpp.sh  build_pdf.sh  build_tex.sh  compile.sh  expectation_normal_cdf.tex  master_bib.bib  revisiting_black76.tex  run_tests.bat  run_tests.sh
cmake/: pdmath_compile_latex.cmake  pdmath_latex_compile.cmake  pdmath_target_helpers.cmake  pdmath_termcolor.cmake  quadmath.cc  simd.cc  xopen.cc
examples/: CMakeLists.txt
examples/exercises/: CMakeLists.txt  stat_learn_sparsity_4.7.cc
examples/exercises/stat_learn_sparsity_worked/: CMakeLists.txt  ex4.7.cc
exercises/: stat_learn_sparsity_solutions.tex  stat_learn_sparsity_worked.tex
include/pdmath/: bases.h  common.h  cpu_info.h  cpuinfo.h  demangle.h  features.h  fev_mixin.h  fibonacci.h  functor_base.h  gev_hev_mixin.h  golden_search.h  gradient_descent.h  helpers.h  impl_policy.h  line_search.h  math_functions.h  math_functors.h  mixins.h  normal.h  norms.h  optimize_result.h  pi.h  pragma.h  program_banner.h  range_format.h  root_result.h  scoped_timer.h  simd.h  type_traits.h  types.h  version.h.in  vtk_actor.h  vtk_axis.h  vtk_chart.h  vtk_image_writer.h  vtk_legend.h  vtk_named_colors.h  vtk_plot.h  vtk_renderer.h  vtk_skeleton.h  (+3 more)
include/pdmath/optimize/: fev_mixin.h  functor_base.h  functor_base.hpp  gev_hev_mixin.h  golden_search.h  golden_search.hpp  optimize_result.h  optimize_result.hpp  root_result.h  root_result.hpp
include/pdmath/testing/: macros.h  utils.h
src/: CMakeLists.txt  cpu_info.cc  cpuinfo.cc  fib50.cc  fib_50.cc  fpi.cc  qmc_pi.cc  qmc_pi_avx.cc  qmc_pi_grid.cc  vtk_fluent_type.cc  vtk_normal_plot.cc  vtk_qmc_pi.cc  vtk_qmc_pi_grid.cc  vtk_trig_plot.cc
src/exercises/: CMakeLists.txt
src/exercises/slsw/: CMakeLists.txt
src/optimize/: CMakeLists.txt
test/: CMakeLists.txt  fibonacci_test.cc  golden_search_test.cc  helpers_test.cc  line_search_test.cc  math_functions_test.cc  math_functors_test.cc  norms_test.cc  program_banner_test.cc  simd_test.cc  type_traits_test.cc
test/optimize/: CMakeLists.txt  golden_search_test.cc
tex/: CMakeLists.txt
tex/exercises/: CMakeLists.txt  num_optimization_worked.tex  stat_learn_sparsity_worked.tex
tex/original/: CMakeLists.txt  bac_returning_math_qs.tex  expectation_normal_cdf.tex  qmc_pi.tex
tex/utils/: exercises_preamble.tex  intro_close.tex  newtocsubsection.tex
